--- a/travel-client/package.json
+++ b/travel-client/package.json
@@ -39,6 +39,7 @@
     "@craco/craco": "^7.1.0",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-testing-library": "^5.11.0",
+    "msw": "^1.2.2",
     "node-sass": "^9.0.0",
     "react-app-alias": "^2.2.2"
   }
