--- a/travel-client/package.json
+++ b/travel-client/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -42,5 +43,11 @@
     "msw": "^1.2.2",
     "node-sass": "^9.0.0",
     "react-app-alias": "^2.2.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs",
+      "transformIgnorePatterns": []
+    }
   }
 }
